# agentic_patterns_experiments

./: main.py  pyproject.toml
chain/: example.py
common/: keys.py  llm.py
mcp_demo/: client.py  langchain_client.py  server.py
memory/: README.md  access_long_memory.py  procedural_memory.py  semantic_memory.py  short_memory.py
multi_agent/: example.py
parallel/: example.py
planning/: example.py
rag/: example.py
reflection/: example.py
routing/: example.py
tools/: example.py
